Fixes to swagger, and updates to validation - removed unused SSN, added oauthId
